@@ -1,8 +1,8 @@
 nco (5.3.3-1) unstable; urgency=low
 
-  * new upstream version Arcade: fxm
+  * new upstream version Sea Shanty: all: qnt ngt zro NaN; ncks: --fpe, ngl rsn chk map, s1d frc_column frc_landunit attribute fix; ncremap: fix prs->hyb w/fat tpl; ncrename: WARN crd/dmn netCDF4
 
- -- Charlie Zender <zender@uci.edu> Wed, 12 Mar 2025 12:26:20 -0700
+ -- Charlie Zender <zender@uci.edu> Fri, 21 Mar 2025 12:26:20 -0700
 
 nco (5.3.2-1) unstable; urgency=low
 
